testsuite/tests/properties/invalid_predicate/common.lkt
from lexer_example import foo_lexer
from test import Example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}

class FooNode implements Node[FooNode] {
}

@abstract class BaseExample: FooNode {
    var1: LogicVar
    var2: LogicVar

    @ignored fun pred1(n: Entity[FooNode]): Bool = n.is_null
    @ignored fun pred2(n: Entity[FooNode], b: Bool = false): Bool =
        n.is_null and b
}
